# factorlasso

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  COMPARISON.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  ci.yml  factorlasso_pyproject.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
benchmarks/: feature_parity.py  ssr_speedup.py
examples/: alpha_const_vs_intercept.py  cv_lambda_selection.py  finance_factor_model.py  genomics_factor_model.py
factorlasso/: __init__.py  cluster_utils.py  cv.py  dependence_utils.py  ewm_utils.py  factor_covar.py  lasso_estimator.py  sign_constraints.py
papers/jss_2026/: .gitignore  README.md  analysis.py  make_replication_zip.py  replicate.py  replication_output.txt  requirements.txt  usage_example.py
papers/jss_2026/applications/: README.md  compare_modes_on_tables.py  etf_simulation_study.py  etf_universe.csv  fetch_etf_panel.py  plot_competitor_study.py  plot_prior_sensitivity.py  prior_sensitivity_study.py  recalibrate_dgp_sweep.py  recentring_study.py  run_etf_study.py  tau_sweep_study.py
papers/jss_2026/applications/data/: etf_excess_logreturns.csv  futures_risk_factors.csv  riskfree_monthly.csv
papers/jss_2026/paper/: README.md  article.tex  refs.bib
papers/jss_2026/paper/figures/: table2_headline_ablation.csv  table2_headline_ablation.tex
papers/jss_2026/paper/jss_report/: comments_17june2026.rtf
papers/jss_2026/simulations/: README.md  __init__.py  dgp.py  estimators.py  matf_calibration.py  metrics.py  run.py  study.yaml  timing_scaling.py
papers/jss_2026/simulations/tests/: test_dgp.py  test_metrics.py  test_smoke.py
papers/sign_pooling_2026/: .gitignore  Makefile  README.md
papers/sign_pooling_2026/paper/: article.abs  article.tex  refs.bib  tableE1_clusters.tex  tableS1_base.tex  tableS2_regime.tex  tableS3_rhobar.tex  tableS4_coop.tex
papers/sign_pooling_2026/replication/: eqtl_exhibits.py  eqtl_pipeline.py  exhibits.py  requirements.txt  sign_pooling_robustness.py  sign_pooling_simulation.py
papers/sign_pooling_2026/replication/data/: README.md  yeast_full.npz
papers/sign_pooling_2026/replication/results/: base_table.csv  clusters.csv  coop_benchmark.csv  correlated_predictors.csv  derived_signs.csv  fit.npz  gate_correction.csv  gate_roc.csv  hotspots.csv  parity.csv  recoverability.csv  regime_map.csv  rho_resid_attenuation.csv  rhocut_sensitivity.csv  sign_consistency.csv  summary.csv
tests/: test_auto_sign_adaptive_weights.py  test_auto_sign_threshold.py  test_cluster_nan_x_and_api_fixes.py  test_corr_zero_variance.py  test_coverage_extras.py  test_cv_lambda_path.py  test_dependence_measures.py  test_derived_signs_field.py  test_diagnostic_norm.py  test_distance_transform.py  test_external_parity.py  test_factorlasso.py  test_integration.py  test_l1_weight.py  test_lambda_path_dpp.py  test_mode_validation.py  test_nan_valid_row_invariance.py  test_new_features.py  test_sign_constraints.py  test_single_asset_cluster.py  test_sklearn_interop.py  test_solver_fallback.py
