[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factorlasso"
version = "0.1.7"
description = "Sparse factor model estimation with sign-constrained LASSO, prior-centered regularisation, and hierarchical group LASSO (HCGL)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
keywords = [
    "lasso",
    "group-lasso",
    "factor-model",
    "penalized-regression",
    "sparse-regression",
    "sign-constraints",
    "covariance-estimation",
    "cvxpy",
    "multi-output-regression",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "scipy>=1.9",
    "cvxpy>=1.3",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "numpydoc>=1.5",
]

[project.urls]
Homepage = "https://github.com/ArturSepp/factorlasso"
Documentation = "https://factorlasso.readthedocs.io"
Repository = "https://github.com/ArturSepp/factorlasso"
Issues = "https://github.com/ArturSepp/factorlasso/issues"
Changelog = "https://github.com/ArturSepp/factorlasso/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["factorlasso*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["factorlasso"]

[tool.coverage.report]
show_missing = true
fail_under = 90
