[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factorlasso"
version = "0.7.1"
description = "Sparse multi-asset factor model estimation with cluster-pooled sign derivation, hierarchical group LASSO (HCGL), adaptive penalty reweighting, and consistent factor covariance assembly"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
keywords = [
    "lasso",
    "group-lasso",
    "sparse-group-lasso",
    "adaptive-lasso",
    "hcgl",
    "factor-model",
    "penalized-regression",
    "sparse-regression",
    "sign-constraints",
    "cluster-pooled-sign-derivation",
    "covariance-estimation",
    "cvxpy",
    "multi-output-regression",
    "multi-response-regression",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "scipy>=1.9",
    "cvxpy>=1.3",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "numpydoc>=1.5",
]
# Dependencies for the in-repo simulation harness
# (``papers/jss_2026/simulations/`` directory).
# Not required by the published wheel; install with::
#
#     pip install factorlasso[simulations]
#
# or for editable development from the repo::
#
#     pip install -e ".[simulations]"
#
# Notes on the included solvers:
# - ``scs`` and ``ecos`` are added so the simulation harness's
#   CLARABEL→ECOS→SCS solver fallback chain has a real fallback
#   available. Production rosaa code does not retry on solver failure;
#   it surfaces the underlying problem. The harness, however, must
#   complete the full study grid even when a small fraction of cells
#   hit numerically pathological problem instances.
simulations = [
    "pyyaml>=6.0",
    "joblib>=1.2",
    "pyarrow>=12.0",
    "scs>=3.0",
    "ecos>=2.0",
]

[project.urls]
Homepage = "https://github.com/ArturSepp/factorlasso"
Documentation = "https://github.com/ArturSepp/factorlasso#readme"
Repository = "https://github.com/ArturSepp/factorlasso"
Issues = "https://github.com/ArturSepp/factorlasso/issues"
Changelog = "https://github.com/ArturSepp/factorlasso/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["factorlasso*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["factorlasso"]

[tool.coverage.report]
show_missing = true
fail_under = 90
